manifests/argocd-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    # Specify the cluster issuer created previously to use for the ingress
    cert-manager.io/cluster-issuer: letsencrypt-nginx-cert
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      # Specify the hosts to use for the ingress - same as the host in the ingress resource
      - argocd.samsarian.com
      # Specify the secret name to use for the ingress - this will be dynamically created by cert-manager
      secretName: argocd-server-tls
  ingressClassName: nginx
  rules:
    - host: argocd.samsarian.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
            path: /
