manifests/prom-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    # Specify the cluster issuer created previously to use for the ingress
    cert-manager.io/cluster-issuer: letsencrypt-nginx-cert
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true" # Make pod do SSL termination
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Force Ingress to pod communication to be HTTPS
spec:
  tls:
    - hosts:
      # Specify the hosts to use for the ingress - same as the host in the ingress resource
      - prom.samsarian.com
      # Specify the secret name to use for the ingress - this will be dynamically created by cert-manager
      secretName: prom-server-tls
  ingressClassName: nginx
  rules:
    - host: prom.samsarian.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
            path: /
